Adds optional create fields
