# apps/judicial-system/api/src/app/modules/case/dto/createCase.dto.ts
@@ -1,5 +1,6 @@
-import { IsNotEmpty, IsString } from 'class-validator'
-import { ApiProperty } from '@nestjs/swagger'
+import { IsNotEmpty, IsString, IsOptional, IsEnum } from 'class-validator'
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger'
+import { CaseState } from '../case.model'
 
 export class CreateCaseDto {
   @IsNotEmpty()
@@ -11,4 +12,14 @@ export class CreateCaseDto {
   @IsString()
   @ApiProperty()
   readonly suspectNationalId: string
+
+  @IsOptional()
+  @IsString()
+  @ApiPropertyOptional()
+  readonly suspectName: string
+
+  @IsOptional()
+  @IsEnum(CaseState)
+  @ApiPropertyOptional({ enum: CaseState })
+  readonly state: string
 }
